--- a/templates/booking2.html
+++ b/templates/booking2.html
@@ -12,7 +12,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f3f4f6; /* Set background color */
             background-image: url("../static/images/13.webp");
-            background-image: url("../static/images/map.jpg");
+            /* background-image: url("../static/images/map.jpg"); */
             background-size: cover;
  image-rendering: crisp-edges;
 
@@ -61,6 +61,7 @@
             width: 100%;
             padding: 10px;
             background-color: #4caf50; /* Set button background color */
+            background-color: #4d80bd;
             color: #fff; /* Set button text color */
             border: none;
             border-radius: 5px;
@@ -68,7 +69,7 @@
             transition: background-color 0.3s;
         }
         .form-button:hover {
-            background-color: #45a049; /* Set button hover background color */
+            background-color: #317e34; /* Set button hover background color */
         }
         .company-logo {
             display: block;
