--- a/templates/driver.html
+++ b/templates/driver.html
@@ -28,7 +28,7 @@
     <h1>Driver Details</h1>
     <div class="container">
         <div class="card">
-            <img src="/static/driver3.jpg" />
+            <img src="data:image/{{ image_format }};base64,{{ image }}" alt="Driver Image">
             <div class="text">
                 <p><strong class="attribute">Name:</strong> <span class="value">{{name}}</span></p>
                 <p><strong class="attribute">Phone Number:</strong> <span class="value">{{number}}</span></p>
