--- a/workspace/templates/landing.html
+++ b/workspace/templates/landing.html
@@ -10,23 +10,7 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            /* background-image: url("../static/images/9.avif"); */
-            background-image: url("../static/images/13.webp");
-
-            /* background-image: url("../static/images/map2.jpg"); */
-            /* background-image: url("../static/images/13.webp"); */
-
-            /* background-image: url("../static/images/buscv.jpg"); */
-            background-attachment: fixed;
-  /* background-size: auto; */
-  /* background-size: contain; */
- background-size: cover;
- /* image-rendering: -webkit-optimize-contrast; */
- /* image-rendering: crisp-edges; */
- 
-
         }
-        
         .container {
             max-width: 400px;
             margin: 50px auto;
@@ -41,11 +25,11 @@
     <div class="container text-center">
         <h1 class="text-3xl font-bold mb-8">Welcome to Transport Management System</h1>
         <ul class="text-lg">
-            <li class="mb-4"><a href="{{ url_for('booking2') }}" class="text-blue-500 hover:underline">Book a Bus</a></li>
+            <li class="mb-4"><a href="{{ url_for('booking') }}" class="text-blue-500 hover:underline">Book a Bus</a></li>
             <!-- Add other options as needed -->
         </ul>
     </div>
-    <img src="../static/images/logo.png" alt="Moon Macrosystems Logo" style="position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); width: 150px; height: auto;">
+    <img src="https://images2.imgbox.com/60/76/5MPW7a65_o.png" alt="Moon Macrosystems Logo" style="position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); width: 150px; height: auto;">
 
 </body>
 </html>
